# RustStreamBench

./: LICENSE.md  README.md
bzip2/: Cargo.toml  README.md  get_inputs.sh
bzip2/src/: main.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  std_threads.rs  tokio.rs
eye-detector/: Cargo.toml  README.md  config_opencv_vars.sh  get_inputs.sh
eye-detector/src/: common.rs  main.rs  par_better.rs  par_rust_spp.rs  par_std_threads.rs  par_tokio.rs  seq.rs
image-processing/: Cargo.toml  README.md  create_inputs.sh  get_inputs.sh
image-processing/src/: main.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  std_threads.rs  tokio.rs
libs/: config_opencv_vars.sh  setup_opencv_with_ffmpeg.sh
libs/rust-ssp/: Cargo.toml  README.md
micro-bench/: Cargo.toml  README.md
micro-bench/src/: main.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  std_threads.rs  tokio.rs
